Add LobbiesAPI doc
